# sbir-grants

./: .gitignore  CHANGELOG.md  INSTALLATION.md  INSTALL_WINDOWS.md  README.md  extract_doc.py  get_cf_models.js  install-windows.bat  test-windows-comprehensive.sh  test-windows-install.bat
faq/: faq_local_sbir.md
mcp-server/: README.md  add_frontmatter.py  chunker.py  proposal_generator_impl.py  pyproject.toml  query_expansion.py  requirements.txt  roi_calculator.py  search_cache.py  server.py
references/: audit_response_guide.md  budget_justification_guide.md  closing_report_guide.md  commercialization.md  industry_specific_guidance.md  ip_strategy.md  local_sbir_2026_tracker.md  local_sbir_overview.md  local_sbir_success_factors.md  market_analysis.md  methodology_budget_planning.md  methodology_innovation.md  methodology_market_analysis.md  methodology_team_building.md  phase2_strategy.md  swot_analysis_guide.md  writing_data_presentation.md
saas/: README.md
sbir-grants/: .gitignore  FAQ.md  (+14 more)
sbir-grants/mcp-server/: INTEGRATION_GUIDE.md  README.md  add_frontmatter.py  ai_draft_review.py  build_index.py  chunker.py  company_verify.py  enrich_answer.py  ingest_reference_document.py  proposal_generator_impl.py  proposal_state.py  pyproject.toml  quality_check.py  query_expansion.py  requirements.txt  roi_calculator.py  save_extracted_answers.py  search_cache.py  search_suggestions.py  section_generation_prompt.py  server.py  test_diversity.py  test_proposal.docx  test_review_feature.py  test_search.py  test_search_features.py  update_config.py  vector_search.py
(+142 files in other folders)
